[metadata]
name = Flask-phpBB3
author = Gregor Kalisnik
author_email = gregor@kalisnik.si
home-page = https://github.com/MasterMind2k/flask-phpbb3
license = BSD
summary = Connector for Flask with phpBB3 board
description-file = README.rst
classifier =
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Software Development :: Libraries :: Python Modules

[files]
modules = flask_phpbb3

[wheel]
universal = 1
